# Uvc_camera

./: CMakeLists.txt  README.md  main.c
include/: dev_camera.h  dev_jpeg.h  jpeglib.h
src/: dev_camera.c  dev_jpeg.c  main.c
src/include/: dev_camera.h
